--- a/site/index.html
+++ b/site/index.html
@@ -3516,6 +3516,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>智谱AI 新增chatglm_turbo</li>
 <li>恢复tts.ai-lab.top的兼容，新使用方法参考文档说明</li>
+<li>优化tts、webui代码</li>
 </ul>
 </li>
 <li>
