--- a/site/index.html
+++ b/site/index.html
@@ -3512,6 +3512,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-3</p>
+<ul>
+<li>优化线程启动实现，功能没启用不启动线程</li>
+</ul>
+</li>
+<li>
 <p>2023-12-1</p>
 <ul>
 <li>智谱AI 新增chatglm_turbo</li>
