--- a/site/index.html
+++ b/site/index.html
@@ -3516,6 +3516,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>优化线程启动实现，功能没启用不启动线程</li>
 <li>恢复聊天模式 翻译配置热加载，优化代码实现</li>
+<li>text_generation_webui支持上下文记忆</li>
 </ul>
 </li>
 <li>
