答谢模块 文案部分改为多行文案随机获取

--- a/site/index.html
+++ b/site/index.html
@@ -3535,6 +3535,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>删减违禁词</li>
 <li>接入 通义星尘（固定角色）</li>
+<li>答谢模块 文案部分改为多行文案随机获取</li>
 </ul>
 </li>
 <li>
