--- a/site/index.html
+++ b/site/index.html
@@ -3531,6 +3531,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-9</p>
+<ul>
+<li>补充遗漏依赖</li>
+</ul>
+</li>
+<li>
 <p>2023-12-8</p>
 <ul>
 <li>删减违禁词</li>
