--- a/site/index.html
+++ b/site/index.html
@@ -3529,6 +3529,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>补充遗漏依赖</li>
 <li>依赖文件统一为一个</li>
+<li>优化通义千问报错日志</li>
+<li>增加了恢复出厂的功能，但隐藏了按钮</li>
 </ul>
 </li>
 <li>
