新增 动态配置功能，暂时仅针对抖音，可以根据在线人数动态切换配置内容实现改话术、配音等功能（大改动！

--- a/site/index.html
+++ b/site/index.html
@@ -3531,6 +3531,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>依赖文件统一为一个</li>
 <li>优化通义千问报错日志</li>
 <li>增加了恢复出厂的功能，但隐藏了按钮</li>
+<li>新增 动态配置功能，暂时仅针对抖音，可以根据在线人数动态切换配置内容实现改话术、配音等功能（大改动！可能有很大的bug）</li>
 </ul>
 </li>
 <li>
