通用配置-音频播放 新增 文本切分启用开关，关闭可以语句一次性合成（TTS吃得消的情况下）

--- a/site/index.html
+++ b/site/index.html
@@ -3525,6 +3525,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-12</p>
+<ul>
+<li>通用配置-音频播放 新增 文本切分启用开关，关闭可以语句一次性合成（TTS吃得消的情况下）</li>
+</ul>
+</li>
+<li>
 <p>2023-12-9</p>
 <ul>
 <li>补充遗漏依赖</li>
