--- a/site/index.html
+++ b/site/index.html
@@ -3546,6 +3546,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-12-13</p>
 <ul>
 <li>接入 千帆大模型</li>
+<li>更新 elevenlabs/nicegui库</li>
 </ul>
 </li>
 <li>
