新增API程序，第三方可以通过api控制程序运行、配置修改、直播数据发送等，后续系统全部功能皆可

--- a/site/index.html
+++ b/site/index.html
@@ -3589,6 +3589,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-16</p>
+<ul>
+<li>新增API程序，第三方可以通过api控制程序运行、配置修改、直播数据发送等，后续系统全部功能皆可通过api进行操作</li>
+</ul>
+</li>
+<li>
 <p>2023-12-15</p>
 <ul>
 <li>新增 千帆大模型的接入；</li>
