--- a/site/index.html
+++ b/site/index.html
@@ -3591,7 +3591,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2023-12-17</p>
 <ul>
-<li>新增 极地极光UI配色</li>
+<li>新增 极地极光、曲奇饼干 UI配色</li>
 <li>修复api 聊天模式相关bug</li>
 </ul>
 </li>
