--- a/site/index.html
+++ b/site/index.html
@@ -3589,6 +3589,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-18</p>
+<ul>
+<li>新增 谷歌 Gemini 的接入</li>
+<li>新增docker（但暂时并不适用）</li>
+</ul>
+</li>
+<li>
 <p>2023-12-17</p>
 <ul>
 <li>新增 极地极光、曲奇饼干 UI配色</li>
