--- a/site/index.html
+++ b/site/index.html
@@ -3606,6 +3606,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-21</p>
+<ul>
+<li>TTS新增gradio模式，用于直接配置传参等信息，来适应绝大多数的有gradio接口的tts项目</li>
+</ul>
+</li>
+<li>
 <p>2023-12-18</p>
 <ul>
 <li>新增 谷歌 Gemini 的接入</li>
