新增配置检测函数，用于防止用户瞎配置导致无法使用（暂时只开了个头，后续推进功能实现）

--- a/site/index.html
+++ b/site/index.html
@@ -4061,6 +4061,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>给log增加颜色，看日志舒服了</li>
 <li>新增 助播模式（需要注意的是此功能的本地问答-文本 情况下语音区分暂未实现） </li>
 <li>优化音频播放逻辑，之前哪些直接插队的本地音频将会老实排队，等前面文本先合成 </li>
+<li>新增配置检测函数，用于防止用户瞎配置导致无法使用（暂时只开了个头，后续推进功能实现）</li>
 </ul>
 </li>
 <li>
