--- a/site/index.html
+++ b/site/index.html
@@ -4056,6 +4056,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-26</p>
+<ul>
+<li>修复b站2 开放平台 appid数据类型错误问题</li>
+</ul>
+</li>
+<li>
 <p>2023-12-25</p>
 <ul>
 <li>给log增加颜色，看日志舒服了</li>
