--- a/site/index.html
+++ b/site/index.html
@@ -4059,6 +4059,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-12-26</p>
 <ul>
 <li>修复b站2 开放平台 appid数据类型错误问题</li>
+<li>修改日志INFO等级颜色为白色，自定义请修改logger.py</li>
 </ul>
 </li>
 <li>
