--- a/site/index.html
+++ b/site/index.html
@@ -4060,6 +4060,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>修复b站2 开放平台 appid数据类型错误问题</li>
 <li>修改日志INFO等级颜色为白色，自定义请修改logger.py</li>
+<li>webui尝试实现api接口，还在功能尝试中，请勿调用</li>
+<li>异常报警 新增 平台异常、TTS异常的后端实现</li>
 </ul>
 </li>
 <li>
