--- a/site/index.html
+++ b/site/index.html
@@ -4029,6 +4029,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-27</p>
+<ul>
+<li>优化chatgpt返回内容</li>
+<li>异常报警新增llm，平台，svc的后端实现</li>
+<li>补充异常报警语音</li>
+</ul>
+</li>
+<li>
 <p>2023-12-26</p>
 <ul>
 <li>修复b站2 开放平台 appid数据类型错误问题</li>
