--- a/site/index.html
+++ b/site/index.html
@@ -4029,6 +4029,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-28</p>
+<ul>
+<li>优化chatgpt的测试程序</li>
+</ul>
+</li>
+<li>
 <p>2023-12-27</p>
 <ul>
 <li>优化chatgpt返回内容</li>
