--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,11 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-12-28</p>
 <ul>
 <li>优化chatgpt的测试程序</li>
+<li>webui实现异常报警功能</li>
+<li>修复闲时任务随机列表无法关闭的bug</li>
+<li>text-gen新增类型配置，默认为coyude</li>
+<li>修改LLM函数统一为get_resp</li>
+<li>删减违禁词</li>
 </ul>
 </li>
 <li>
