--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-29</p>
+<ul>
+<li>针对文案内容被弹幕打断后顺序会错乱问题进行了修改，改为打断后恢复会重载整个数据列表，仍有大量的问题，暂时凑合</li>
+</ul>
+</li>
+<li>
 <p>2023-12-28</p>
 <ul>
 <li>优化chatgpt的测试程序</li>
