--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-30</p>
+<ul>
+<li>助播模式 音频匹配新增 匹配算法选项，提供可用性</li>
+<li>优化整理了部分代码</li>
+</ul>
+</li>
+<li>
 <p>2023-12-29</p>
 <ul>
 <li>针对文案内容被弹幕打断后顺序会错乱问题进行了修改，改为打断后恢复会重载整个数据列表，仍有大量的问题，暂时凑合</li>
