--- a/site/index.html
+++ b/site/index.html
@@ -4021,6 +4021,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>助播模式 音频匹配新增 匹配算法选项，提供可用性</li>
 <li>优化整理了部分代码</li>
+<li>助播模式 新增类型自定义选择，可以选择那些数据会触发助播，增加可用性</li>
+<li>修复红血球佬的在线tts调用失败问题（ssl禁用）</li>
 </ul>
 </li>
 <li>
