--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2023-12-31</p>
+<ul>
+<li>点歌模式新增相似度配置项，优化文件搜索函数，不被拓展名干扰</li>
+</ul>
+</li>
+<li>
 <p>2023-12-30</p>
 <ul>
 <li>助播模式 音频匹配新增 匹配算法选项，提供可用性</li>
