webui新增webui配置（IP、端口、标题）

--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2023-12-31</p>
 <ul>
 <li>点歌模式新增相似度配置项，优化文件搜索函数，不被拓展名干扰</li>
+<li>webui新增webui配置（IP、端口、标题）</li>
 </ul>
 </li>
 <li>
