--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-2</p>
+<ul>
+<li>新增最大用户名长度，在主要应用的版本实现此功能，防止有的用户名过长，影响观感</li>
+</ul>
+</li>
+<li>
 <p>2023-12-31</p>
 <ul>
 <li>点歌模式新增相似度配置项，优化文件搜索函数，不被拓展名干扰</li>
