--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-2</p>
 <ul>
 <li>新增最大用户名长度，在主要应用的版本实现此功能，防止有的用户名过长，影响观感</li>
+<li>新增普通音频播放时间间隔配置项（如果你感觉音频和音频之间太快或太慢，可以自行调节间隔时间）</li>
 </ul>
 </li>
 <li>
