--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-3</p>
+<ul>
+<li>SD配置项补充其他LLM</li>
+<li>新增答谢板块的随机开关（后端未实现）</li>
+<li>删减违禁词</li>
+</ul>
+</li>
+<li>
 <p>2024-1-2</p>
 <ul>
 <li>新增最大用户名长度，在主要应用的版本实现此功能，防止有的用户名过长，影响观感</li>
