聊天页新增调教功能，用于在直播中动态调教LLM而不进行TTS合成

--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-4</p>
 <ul>
 <li>完成 答谢板块 随机文案的开关功能</li>
+<li>聊天页新增调教功能，用于在直播中动态调教LLM而不进行TTS合成</li>
 </ul>
 </li>
 <li>
