--- a/site/index.html
+++ b/site/index.html
@@ -4021,6 +4021,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>完成 答谢板块 随机文案的开关功能</li>
 <li>聊天页新增调教功能，用于在直播中动态调教LLM而不进行TTS合成</li>
+<li>页面配置 新增 自动运行 功能。启用后，启动webui后会直接根据当前配置运行。</li>
+<li>异常报警新增 开始报警错误数、自动重启错误数的配置项，优化报警逻辑。其中自动重启配合“自动运行”使用，以便在部分功能出错时，可以重启自修复。</li>
 </ul>
 </li>
 <li>
