--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-6</p>
 <ul>
 <li>闲时任务日志输出优化</li>
+<li>text-gen新增官方api的对接并新增传参top_p、top_k、温度、seed</li>
 </ul>
 </li>
 <li>
