--- a/site/index.html
+++ b/site/index.html
@@ -4017,6 +4017,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-7</p>
+<ul>
+<li>修复积分页UI错误问题</li>
+</ul>
+</li>
+<li>
 <p>2024-1-6</p>
 <ul>
 <li>闲时任务日志输出优化</li>
