--- a/site/index.html
+++ b/site/index.html
@@ -4020,6 +4020,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-7</p>
 <ul>
 <li>修复积分页UI错误问题</li>
+<li>修改默认配置，关闭所有异常报警</li>
 </ul>
 </li>
 <li>
