--- a/site/index.html
+++ b/site/index.html
@@ -4021,6 +4021,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>修复积分页UI错误问题</li>
 <li>修改默认配置，关闭所有异常报警</li>
+<li>异常报警计数改到函数内部计数，提高逻辑性</li>
 </ul>
 </li>
 <li>
