--- a/site/index.html
+++ b/site/index.html
@@ -4061,6 +4061,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-8</p>
+<ul>
+<li>聊天模式 新增 faster_whisper的接入，即可不使用魔法，不用花钱，本地进行语音转文本；聊天页 增加部分新配置方便自定义 </li>
+<li>删除torch相关的库，请手动安装 </li>
+<li>助播内容不再触发念用户名功能（脑测没bug） </li>
+<li>修复SD加载LLM异常的bug </li>
+</ul>
+</li>
+<li>
 <p>2024-1-7</p>
 <ul>
 <li>修复积分页UI错误问题</li>
