--- a/site/index.html
+++ b/site/index.html
@@ -4063,6 +4063,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-1-8</p>
 <ul>
+<li>SD新增保存图片到本地相关功能，优化其UI布局</li>
+</ul>
+</li>
+<li>
+<p>2024-1-8</p>
+<ul>
 <li>聊天模式 新增 faster_whisper的接入，即可不使用魔法，不用花钱，本地进行语音转文本；聊天页 增加部分新配置方便自定义 </li>
 <li>删除torch相关的库，请手动安装 </li>
 <li>助播内容不再触发念用户名功能（脑测没bug） </li>
