--- a/site/index.html
+++ b/site/index.html
@@ -4061,6 +4061,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-10</p>
+<ul>
+<li>SD追加虚拟摄像头创建的日志输出，方便用户使用</li>
+</ul>
+</li>
+<li>
 <p>2024-1-8</p>
 <ul>
 <li>SD新增保存图片到本地相关功能，优化其UI布局</li>
