--- a/site/index.html
+++ b/site/index.html
@@ -4061,6 +4061,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-12</p>
+<ul>
+<li>兼容新版的langchain_chatchat</li>
+</ul>
+</li>
+<li>
 <p>2024-1-11</p>
 <ul>
 <li>chatgpt配置新增测试按钮，可以测试当前配置是否正确</li>
