--- a/site/index.html
+++ b/site/index.html
@@ -4064,6 +4064,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-12</p>
 <ul>
 <li>兼容新版的langchain_chatchat</li>
+<li>本地问答新增配置项 最大用户名长度，用于自定义限制</li>
 </ul>
 </li>
 <li>
