聊天模式新增 按键监听开关；TTS新增GPT_SoVITS的接入

--- a/site/index.html
+++ b/site/index.html
@@ -4064,6 +4064,9 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-17</p>
 <ul>
 <li>新增对接OpenVoice时gradio的配置参考</li>
+<li>更新思维导图</li>
+<li>聊天模式新增 按键监听开关</li>
+<li>TTS新增GPT_SoVITS的接入</li>
 </ul>
 </li>
 <li>
