--- a/site/index.html
+++ b/site/index.html
@@ -3893,6 +3893,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h4 id="gpt-sovits">GPT-SoVITS</h4>
 <p>官方仓库：<a href="https://github.com/RVC-Boss/GPT-SoVITS">GPT-SoVITS</a>  </p>
 <p>整合包下载：<a href="https://pan.quark.cn/s/936dcae8aba0">https://pan.quark.cn/s/936dcae8aba0</a>  </p>
+<p>天降之物模型分享：<a href="https://github.com/Ikaros-521/GPT-SoVITS/releases">https://github.com/Ikaros-521/GPT-SoVITS/releases</a>  </p>
 <p>运行webui后，启动TTS推理，然后适配配置项即可，注意参考音频路径还有ws的端口即可，别的配置问题不大。  </p>
 <h3 id="_52">变声</h3>
 <h4 id="ddsp-svc">DDSP-SVC</h4>
