修复GPT-SoVITS参考语言配置项的bug；违禁词过滤新增违禁开关、违禁丢弃、违禁替换等功能

--- a/site/index.html
+++ b/site/index.html
@@ -4100,6 +4100,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-18</p>
+<ul>
+<li>修复GPT-SoVITS参考语言配置项的bug</li>
+<li>违禁词过滤新增违禁开关、违禁丢弃、违禁替换等功能</li>
+</ul>
+</li>
+<li>
 <p>2024-1-17</p>
 <ul>
 <li>新增对接OpenVoice时gradio的配置参考</li>
