--- a/site/index.html
+++ b/site/index.html
@@ -4104,6 +4104,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>修复GPT-SoVITS参考语言配置项的bug</li>
 <li>违禁词过滤新增违禁开关、违禁丢弃、违禁替换等功能</li>
+<li>修复动态文案无法使用的bug</li>
 </ul>
 </li>
 <li>
