--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-21</p>
+<ul>
+<li>聊天页 新增 复读音频插队，配合audio_player_v2可以使用</li>
+</ul>
+</li>
+<li>
 <p>2024-1-18</p>
 <ul>
 <li>修复GPT-SoVITS参考语言配置项的bug</li>
