--- a/site/index.html
+++ b/site/index.html
@@ -4145,6 +4145,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-1-21</p>
 <ul>
+<li>按键映射 新增 礼物映射按键，可玩性增加</li>
+</ul>
+</li>
+<li>
+<p>2024-1-21</p>
+<ul>
 <li>聊天页 新增 复读音频插队，配合audio_player_v2可以使用</li>
 </ul>
 </li>
