--- a/site/index.html
+++ b/site/index.html
@@ -4143,7 +4143,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
-<p>2024-1-21</p>
+<p>2024-1-23</p>
+<ul>
+<li>文案页 新增 文案文本加载相关的功能，合成功能开发中</li>
+</ul>
+</li>
+<li>
+<p>2024-1-22</p>
 <ul>
 <li>按键映射 新增 礼物映射按键，可玩性增加</li>
 </ul>
