--- a/site/index.html
+++ b/site/index.html
@@ -4148,6 +4148,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>文案页 新增 文案文本加载相关的功能，合成功能开发中</li>
 <li>过滤新增表情弹幕过滤，就是[]包裹的内容</li>
 <li>优化日志输出</li>
+<li>SD板块新增翻译功能，源自翻译页配置，暂时仅有百度翻译。</li>
 </ul>
 </li>
 <li>
