--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-25</p>
+<ul>
+<li>聊天类型新增 alice（群友定制）</li>
+</ul>
+</li>
+<li>
 <p>2024-1-23</p>
 <ul>
 <li>文案页 新增 文案文本加载相关的功能，合成功能开发中</li>
