延长聊天页 按键监听时长为0.5s，降低误触概率

--- a/site/index.html
+++ b/site/index.html
@@ -4146,6 +4146,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-25</p>
 <ul>
 <li>聊天类型新增 alice（群友定制）</li>
+<li>延长聊天页 按键监听时长为0.5s，降低误触概率</li>
 </ul>
 </li>
 <li>
