--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-26</p>
+<ul>
+<li>优化webui排版</li>
+<li>补充原文字幕的配置项</li>
+</ul>
+</li>
+<li>
 <p>2024-1-25</p>
 <ul>
 <li>聊天类型新增 alice（群友定制）</li>
