--- a/site/index.html
+++ b/site/index.html
@@ -4147,6 +4147,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>优化webui排版</li>
 <li>补充原文字幕的配置项</li>
+<li>新增谷歌翻译，接入通用翻译和SD翻译</li>
 </ul>
 </li>
 <li>
