--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-29</p>
+<ul>
+<li>优化翻译前原文字幕的保存实现</li>
+</ul>
+</li>
+<li>
 <p>2024-1-27</p>
 <ul>
 <li>优化文案播放逻辑，文案播放过程中进行播放列表索引值记录，在被打断时，会从被打断的播放列表恢复播放（待大数据测试</li>
