--- a/site/index.html
+++ b/site/index.html
@@ -4146,6 +4146,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-29</p>
 <ul>
 <li>优化翻译前原文字幕的保存实现</li>
+<li>页面配置新增 板块显影配置（实际显影功能还未实现，待推进，后续可能做成显示+功能开关）</li>
 </ul>
 </li>
 <li>
