--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-1-31</p>
+<ul>
+<li>webui实现板块显影功能</li>
+</ul>
+</li>
+<li>
 <p>2024-1-29</p>
 <ul>
 <li>优化翻译前原文字幕的保存实现</li>
