--- a/site/index.html
+++ b/site/index.html
@@ -4146,6 +4146,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-1-31</p>
 <ul>
 <li>webui实现板块显影功能</li>
+<li>Live2D移到虚拟身体，新增模型名配置，可以自动检索模型名，进行模型加载</li>
 </ul>
 </li>
 <li>
