--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,19 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-2</p>
+<ul>
+<li>智谱新增glm3-turbo和glm4的接入</li>
+</ul>
+</li>
+<li>
+<p>2024-2-1</p>
+<ul>
+<li>webui 文案页 文案音频合成新增合成后音频在页面试听和删除的功能</li>
+<li>本地问答库-json新增积分的回答内容</li>
+</ul>
+</li>
+<li>
 <p>2024-1-31</p>
 <ul>
 <li>webui实现板块显影功能</li>
