gpt-sovits新增官方api对接，更加方便高效

--- a/site/index.html
+++ b/site/index.html
@@ -4146,6 +4146,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-2-2</p>
 <ul>
 <li>智谱新增glm3-turbo和glm4的接入</li>
+<li>gpt-sovits新增官方api对接，更加方便高效</li>
 </ul>
 </li>
 <li>
