--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-3</p>
+<ul>
+<li>gpt-sovits对接CyberWon的WebTTS版的API</li>
+</ul>
+</li>
+<li>
 <p>2024-2-2</p>
 <ul>
 <li>智谱新增glm3-turbo和glm4的接入</li>
