--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-4</p>
+<ul>
+<li>新增 数据分析 页面，统计分析最热弹幕词云、积分榜单、礼物榜单</li>
+<li>webui右下角新增返回顶部按钮</li>
+</ul>
+</li>
+<li>
 <p>2024-2-3</p>
 <ul>
 <li>gpt-sovits对接CyberWon的WebTTS版的API</li>
