webui优化文档和关于

--- a/site/index.html
+++ b/site/index.html
@@ -4147,6 +4147,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>新增 数据分析 页面，统计分析最热弹幕词云、积分榜单、礼物榜单</li>
 <li>webui右下角新增返回顶部按钮</li>
+<li>webui优化文档和关于</li>
 </ul>
 </li>
 <li>
