--- a/site/index.html
+++ b/site/index.html
@@ -4148,6 +4148,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>新增 数据分析 页面，统计分析最热弹幕词云、积分榜单、礼物榜单</li>
 <li>webui右下角新增返回顶部按钮</li>
 <li>webui优化文档和关于</li>
+<li>抖音平台融合聊天模式</li>
+<li>抖音平台 在没有启动监听程序的情况下 优化提示日志，并不结束程序，用户可以通过webui重启</li>
 </ul>
 </li>
 <li>
