--- a/site/index.html
+++ b/site/index.html
@@ -4143,6 +4143,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-7</p>
+<ul>
+<li>平台新增 TikTok 的接入，目前支持数据类型：弹幕、礼物、入场。</li>
+</ul>
+</li>
+<li>
 <p>2024-2-4</p>
 <ul>
 <li>新增 数据分析 页面，统计分析最热弹幕词云、积分榜单、礼物榜单</li>
