--- a/site/index.html
+++ b/site/index.html
@@ -4159,6 +4159,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-11</p>
+<ul>
+<li>文档新增一个vercel的备份</li>
+</ul>
+</li>
+<li>
 <p>2024-2-9</p>
 <ul>
 <li>接入clone-voice</li>
