--- a/site/index.html
+++ b/site/index.html
@@ -4162,6 +4162,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-2-11</p>
 <ul>
 <li>文档新增一个vercel的备份</li>
+<li>助播模式新增语音合成配置，可以自定义文本匹配后用的语音合成类型，从而区分助播和主播的声音</li>
 </ul>
 </li>
 <li>
