--- a/site/index.html
+++ b/site/index.html
@@ -4163,6 +4163,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>文档新增一个vercel的备份</li>
 <li>助播模式新增语音合成配置，可以自定义文本匹配后用的语音合成类型，从而区分助播和主播的声音</li>
+<li>文案页-文案音频合成新增语音合成类型选择，可以自定义TTS进行合成，不需要保存就可以切换</li>
 </ul>
 </li>
 <li>
@@ -5515,7 +5516,6 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <h3 id="_74">💸投资方</h3>
 <p><img alt="image" src="static/images/luna-ai/invest.png" /></p>
 <h3 id="_75">合作伙伴</h3>
-<p>智来星球：<a href="//m.zlxqai.com">m.zlxqai.com</a> <code>提供GPT、AI绘图服务</code>  </p>
 <p>青椒云：<a href="//account.qingjiaocloud.com/signin?inviteCode=4Q92ROBQ">qingjiaocloud.com</a> <code>AIGC 高性能云桌面</code>  </p>
 <p>睿声AI：<a href="//www.reecho.ai/">reecho.ai</a> <code>瞬时创建 超级拟真的 人工智能克隆语音</code>  </p>
 <h3 id="_76">🙌赞助</h3>
