--- a/site/index.html
+++ b/site/index.html
@@ -4159,6 +4159,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-14</p>
+<ul>
+<li>按键映射功能改为按键/文案映射，其中新增了按键触发、文案触发控制，可以实现关键词或礼物触发对应文案（比如：用户打赏了一个 辣条，那么在 文案触发类型 包含了 礼物 的情况下，会在对应文案中随机一个文案合成音频进行播放，此外这个文案也支持动态变量）</li>
+</ul>
+</li>
+<li>
 <p>2024-2-13</p>
 <ul>
 <li>修改so-vits-svc和ddsp-svc音频输出路径为绝对路径</li>
