--- a/site/index.html
+++ b/site/index.html
@@ -2577,7 +2577,7 @@
 </div>
 <div class="admonition quote">
 <p class="admonition-title">介绍</p>
-<p><code>Luna AI</code> 是一款结合了最先进技术的虚拟AI主播。它的核心是一系列高效的人工智能模型，包括 <code>ChatterBot、GPT、Claude、langchain、chatglm、text-generation-webui、讯飞星火、智谱AI、谷歌Bard、文心一言、通义星尘、千帆大模型 和 Gemini</code>。这些模型既可以在本地运行，也可以通过云端服务提供支持。</p>
+<p><code>Luna AI</code> 是一款结合了最先进技术的虚拟AI主播。它的核心是一系列高效的人工智能模型，包括 <code>ChatterBot、GPT、Claude、langchain、chatglm、text-generation-webui、讯飞星火、智谱AI、谷歌Bard、文心一言、通义星尘、千帆大模型、Gemini 和 Kimi Chat</code>。这些模型既可以在本地运行，也可以通过云端服务提供支持。</p>
 <p><code>Luna AI</code> 的外观由 <code>Live2D、Vtube Studio、xuniren 和 UE5 结合 Audio2Face</code> 技术打造，为用户提供了一个生动、互动的虚拟形象。这使得 <code>Luna AI</code> 能够在各大直播平台，如 <code>Bilibili、抖音、快手、微信视频号、斗鱼、YouTube、Twitch 和 TikTok</code>，进行实时互动直播。当然，它也可以在本地环境中与您进行个性化对话。</p>
 <p>为了使交流更加自然，<code>Luna AI</code> 使用了先进的自然语言处理技术，结合文本转语音系统，如 <code>Edge-TTS、VITS-Fast、elevenlabs、bark-gui、VALL-E-X、睿声AI、genshinvoice.top、tts.ai-lab.top、OpenVoice、GPT_SoVITS 和 clone-voice</code>。这不仅让它能够生成流畅的回答，还可以通过 <code>so-vits-svc 和 DDSP-SVC</code> 实现声音的变化，以适应不同的场景和角色。</p>
 <p>此外，<code>Luna AI</code> 还能够通过特定指令与 <code>Stable Diffusion</code> 协作，展示画作。用户还可以自定义文案，让 Luna AI 循环播放，以满足不同场合的需求。</p>
@@ -3904,11 +3904,11 @@ if __name__ == "__main__":
 <p>Kimi官网：<a href="https://kimi.moonshot.cn/">https://kimi.moonshot.cn/</a>  </p>
 <p>API申请：<a href="https://platform.moonshot.cn/console/api-keys">https://platform.moonshot.cn/console/api-keys</a>  </p>
 <p>使用：<br />
-    - 大语言模型选择：ChatGPT
-    - 配置
-        - API地址：https://api.moonshot.cn/v1
-        - API密钥：上面申请的密钥
-        - 模型：moonshot-v1-8k</p>
+1. 大语言模型选择：ChatGPT
+2. 配置
+    API地址：https://api.moonshot.cn/v1<br />
+    API密钥：上面申请的密钥<br />
+    模型：moonshot-v1-8k  </p>
 <h4 id="_52">通义千问（不再适配！！！）</h4>
 <p>不再适配！！！</p>
 <p>官网：<a href="//qianwen.aliyun.com/">qianwen.aliyun.com</a>   </p>
