--- a/site/index.html
+++ b/site/index.html
@@ -4266,6 +4266,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-23</p>
+<ul>
+<li>接入 在线版qanything</li>
+<li>audio修改成员变量到类变量（后期应用使用</li>
+</ul>
+</li>
+<li>
 <p>2024-2-19</p>
 <ul>
 <li>对接 QAnything</li>
