--- a/site/index.html
+++ b/site/index.html
@@ -4266,6 +4266,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-24</p>
+<ul>
+<li>合并各平台到单程序，减低冗余</li>
+</ul>
+</li>
+<li>
 <p>2024-2-23</p>
 <ul>
 <li>接入 在线版qanything</li>
