聊天页 新增 播放中不录音的配置，方便在本地做AI客服等场景应用时避免循环录音错误问题

--- a/site/index.html
+++ b/site/index.html
@@ -4269,6 +4269,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-2-24</p>
 <ul>
 <li>合并各平台到单程序，减低冗余</li>
+<li>聊天页 新增 播放中不录音的配置，方便在本地做AI客服等场景应用时避免循环录音错误问题</li>
 </ul>
 </li>
 <li>
