--- a/site/index.html
+++ b/site/index.html
@@ -4270,6 +4270,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>合并各平台到单程序，减低冗余</li>
 <li>聊天页 新增 播放中不录音的配置，方便在本地做AI客服等场景应用时避免循环录音错误问题</li>
+<li>新增配置项 弹幕模板，可以在发送给LLM前对弹幕内容进行包装，如携带用户名等</li>
 </ul>
 </li>
 <li>
