补充动态文案和闲时任务默认数据

--- a/site/index.html
+++ b/site/index.html
@@ -4266,6 +4266,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-27</p>
+<ul>
+<li>补充动态文案和闲时任务默认数据</li>
+</ul>
+</li>
+<li>
 <p>2024-2-26</p>
 <ul>
 <li>对接 koboldcpp</li>
