--- a/site/index.html
+++ b/site/index.html
@@ -4266,6 +4266,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-2-28</p>
+<ul>
+<li>删除PyQT相关源码</li>
+<li>智谱AI新增 应用 功能的对接</li>
+<li>动态文案 前端新增文案组添加删除功能，新增LLM类型，可以指定动态文案选用的LLM</li>
+</ul>
+</li>
+<li>
 <p>2024-2-27</p>
 <ul>
 <li>补充动态文案和闲时任务默认数据</li>
