--- a/site/index.html
+++ b/site/index.html
@@ -4144,7 +4144,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>使用：整合包用户启动我提供的<code>http_api运行.bat</code>脚本，普通用户自行启动<code>http_api.py</code>即可，看到服务正常监听即可。那么此时我们的AI Vtuber也需要配置对应的<code>虚拟身体</code>配置，然后运行即可。  </p>
 <p>视频教程：<a href="//www.bilibili.com/video/BV1uB4y1d7o6/">BV1uB4y1d7o6</a>  </p>
 <h4 id="easyaivtuber">EasyAIVtuber</h4>
-<p>EasyAIVtuber官方仓库：<a href="https://github.com/Ksuriuri/EasyAIVtuber">https://github.com/Ksuriuri/EasyAIVtuber</a>  </p>
+<p>EasyAIVtuber官方仓库： </p>
 <p>参考官方文档完成部署后启动，虚拟身体选择“EasyAIVtuber”，保存运行即可对接使用。  </p>
 <h3 id="_57">翻译</h3>
 <h4 id="_58">百度翻译</h4>
