--- a/site/index.html
+++ b/site/index.html
@@ -4286,6 +4286,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-2-29</p>
 <ul>
 <li>对接EasyAIVtuber</li>
+<li>main程序在聊天模式下 主线程运行完没有等待子线程运行导致的edge-tts运行问题修复</li>
 </ul>
 </li>
 <li>
