--- a/site/index.html
+++ b/site/index.html
@@ -4327,6 +4327,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-2</p>
+<ul>
+<li>通义千问 补充大模型常用配置项 和 联网搜索功能</li>
+</ul>
+</li>
+<li>
 <p>2024-3-1</p>
 <ul>
 <li>新增 通义千问官方API的调用；恢复 web类型下 通义千问 白嫖调用</li>
