--- a/site/index.html
+++ b/site/index.html
@@ -4328,8 +4328,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
-<p>2024-3-3
-    优化数据分析 页面运转 数据库不存在的异常提示</p>
+<p>2024-3-3</p>
+<ul>
+<li>优化数据分析 页面运转 数据库不存在的异常提示</li>
+<li>修改qwen-alice为qwen，适配qwen官方库openai_api接口</li>
+<li>修复 文本转语音页面 通用的测试音频合成 gpt-sovits无法合成测试音频的bug</li>
+</ul>
 </li>
 <li>
 <p>2024-3-2</p>
