--- a/site/index.html
+++ b/site/index.html
@@ -4330,6 +4330,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-4</p>
+<ul>
+<li>修复本地问答下 用户名变成助播的bug</li>
+</ul>
+</li>
+<li>
 <p>2024-3-3</p>
 <ul>
 <li>优化数据分析 页面运转 数据库不存在的异常提示</li>
