支持讯飞星火v3.5 和 助手API

--- a/site/index.html
+++ b/site/index.html
@@ -4347,6 +4347,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-8</p>
+<ul>
+<li>支持讯飞星火v3.5 和 助手API</li>
+</ul>
+</li>
+<li>
 <p>2024-3-6</p>
 <ul>
 <li>新增 虚拟身体 数字人视频播放器</li>
