--- a/site/index.html
+++ b/site/index.html
@@ -4432,6 +4432,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 </ul>
 </li>
 <li>
+<p>2024-3-9</p>
+<ul>
+<li>username大一统 将会迎来巨大的危机，请各位更新的幸运儿留意</li>
+<li>claude配置页 合并2个板块</li>
+</ul>
+</li>
+<li>
 <p>2024-3-8</p>
 <ul>
 <li>支持讯飞星火v3.5 和 助手API</li>
