--- a/site/index.html
+++ b/site/index.html
@@ -4387,6 +4387,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-14</p>
+<ul>
+<li>TTS中的vits、bert-vits2、gpt-sovits的float类型的相关参数支持范围语法, 如 <code>0.8-0.9</code></li>
+<li>chatgpt配置项 大标题补充说明兼容的项目和模型</li>
+</ul>
+</li>
+<li>
 <p>2024-3-13</p>
 <ul>
 <li>对接fish-speech</li>
