--- a/site/index.html
+++ b/site/index.html
@@ -4391,6 +4391,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>TTS中的vits、bert-vits2、gpt-sovits的float类型的相关参数支持范围语法, 如 <code>0.8-0.9</code></li>
 <li>chatgpt配置项 大标题补充说明兼容的项目和模型</li>
+<li>gpt-sovits新增模型配置项，支持动态加载模型</li>
 </ul>
 </li>
 <li>
