--- a/site/index.html
+++ b/site/index.html
@@ -4387,6 +4387,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-17</p>
+<ul>
+<li>图像识别 新增循环定时截图触发功能，方便实现游戏解说、画面讲解等功能，自主触发，丰富直播内容</li>
+</ul>
+</li>
+<li>
 <p>2024-3-15</p>
 <ul>
 <li>新增 图像识别 板块，使用多模态模型（Gemini）的能力实现，暂时仅支持n秒后截图识别内容，未来会继续拓展</li>
