--- a/site/index.html
+++ b/site/index.html
@@ -4390,6 +4390,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-3-17</p>
 <ul>
 <li>图像识别 新增循环定时截图触发功能，方便实现游戏解说、画面讲解等功能，自主触发，丰富直播内容</li>
+<li>新增 自定义命令板块，实现API调用解析获取数据，能动性很高，所以也会有点安全风险</li>
 </ul>
 </li>
 <li>
