--- a/site/index.html
+++ b/site/index.html
@@ -4385,9 +4385,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-3-18<ul>
+<li>
+<p>2024-3-18</p>
+<ul>
 <li>数字人视频播放器新增Sadtalker、GeneFace++</li>
 <li>按键映射 新增 组增减功能，新增单句触发单次按钮，针对表情控制时不希望一句话有多个关键词，表情乱变的情况发生</li>
+<li>webui chatgpt的llm模型下拉框支持搜索、自定义添加模型名（配合ollama这种，方便自定义模型名）</li>
 </ul>
 </li>
 <li>
