--- a/site/index.html
+++ b/site/index.html
@@ -4391,6 +4391,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>webui chatgpt的llm模型下拉框支持搜索、自定义添加模型名（配合ollama这种，方便自定义模型名）</li>
 <li>录音按键支持删除和输入，方便找到对应按键</li>
 <li>修复gpt-SoVITS模型路径无法保存的bug</li>
+<li>聊天页 新增聊天记录，默认显示最新100条的聊天记录，在前端直接可以看到交互数据，不过前端容易被阻塞导致数据不显示或者卡死的情况（5s超时），都在正常情况下，不必慌张</li>
 </ul>
 </li>
 <li>
