--- a/site/index.html
+++ b/site/index.html
@@ -4386,6 +4386,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-20</p>
+<ul>
+<li>补充webui聊天记录回调内容，优化代码实现</li>
+<li>复读处理新增type传参，动态文案数据附带type（配合最新版<a href="https://github.com/Ikaros-521/audio_player">audio_player_v2</a>，可以自定义音频数据优先级排队！）</li>
+</ul>
+</li>
+<li>
 <p>2024-3-19 </p>
 <ul>
 <li>webui chatgpt的llm模型下拉框支持搜索、自定义添加模型名（配合ollama这种，方便自定义模型名）</li>
