--- a/site/index.html
+++ b/site/index.html
@@ -4390,6 +4390,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>补充webui聊天记录回调内容，优化代码实现</li>
 <li>复读处理新增type传参，动态文案数据附带type（配合最新版<a href="https://github.com/Ikaros-521/audio_player">audio_player_v2</a>，可以自定义音频数据优先级排队！）</li>
+<li>音频随机变速合并入 音频播放板块</li>
 </ul>
 </li>
 <li>
