--- a/site/index.html
+++ b/site/index.html
@@ -4386,6 +4386,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-21</p>
+<ul>
+<li>字幕写入文件的日志不显示</li>
+<li>音频处理函数会对文本内容的\n进行去除 </li>
+</ul>
+</li>
+<li>
 <p>2024-3-20</p>
 <ul>
 <li>补充webui聊天记录回调内容，优化代码实现</li>
