--- a/site/index.html
+++ b/site/index.html
@@ -4389,6 +4389,9 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-3-22</p>
 <ul>
 <li>修复tts_ai_lab_top，增加新的选项 语言 </li>
+<li>图像识别 新增摄像头截图功能，核心功能类似窗口截图，配合CV2实现摄像头识别和截图</li>
+<li>补充遗漏的 闲时任务、图像识别的遗忘配置</li>
+<li>修复自定义命令默认配置API过期问题</li>
 </ul>
 </li>
 <li>
