定时任务 修改定时时间为最小最大时间段内随机，并且新增了按钮来增删任务组

--- a/site/index.html
+++ b/site/index.html
@@ -4386,6 +4386,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-24</p>
+<ul>
+<li>定时任务 修改定时时间为最小最大时间段内随机，并且新增了按钮来增删任务组</li>
+</ul>
+</li>
+<li>
 <p>2024-3-22</p>
 <ul>
 <li>修复tts_ai_lab_top，增加新的选项 语言 </li>
