--- a/site/index.html
+++ b/site/index.html
@@ -4404,6 +4404,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-25</p>
+<ul>
+<li>对接 AnythingLLM</li>
+<li>vits新增gpt-sovits的兼容（vits-simple-api）</li>
+<li>tts vits板块新增检索说话人按钮，点击后会调用api的获取说话人接口来更新说话人ID下拉框，不同类型下更新对应的数据</li>
+</ul>
+</li>
+<li>
 <p>2024-3-24</p>
 <ul>
 <li>定时任务 修改定时时间为最小最大时间段内随机，并且新增了按钮来增删任务组</li>
