--- a/site/index.html
+++ b/site/index.html
@@ -4404,6 +4404,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-26</p>
+<ul>
+<li>助播 触发类型转换为中文，追加了几个类型，更方便用户理解</li>
+</ul>
+</li>
+<li>
 <p>2024-3-25</p>
 <ul>
 <li>对接 AnythingLLM</li>
