--- a/site/index.html
+++ b/site/index.html
@@ -4407,6 +4407,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-3-26</p>
 <ul>
 <li>助播 触发类型转换为中文，追加了几个类型，更方便用户理解</li>
+<li>新增CSS主题，蓝天白云</li>
 <li>新增 联动程序板块，支持在运行webui的时候协同运行其他程序，省得点来点去，但需要注意，别配错了，另外一起启动的情况下，日志会混在一起，别大惊小怪</li>
 <li>违禁词删减部分内容</li>
 </ul>
