--- a/site/index.html
+++ b/site/index.html
@@ -4465,6 +4465,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-3-28</p>
+<ul>
+<li>通义千问API调用时，预设不能为空，空时默认一个通用预设</li>
+</ul>
+</li>
+<li>
 <p>2024-3-27</p>
 <ul>
 <li>修复 联动程序无法禁用的bug </li>
