--- a/site/index.html
+++ b/site/index.html
@@ -4471,6 +4471,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 </ul>
 </li>
 <li>
+<p>2024-3-29</p>
+<ul>
+<li>webui新增API，TTS合成、LLM推理。拆出独立的API接口，那么用户即可通过本项目做为中转站实现多项目接口统一管理，集成到自己的项目中使用 </li>
+</ul>
+</li>
+<li>
 <p>2024-3-28</p>
 <ul>
 <li>通义千问API调用时，预设不能为空，空时默认一个通用预设</li>
