--- a/site/index.html
+++ b/site/index.html
@@ -4096,6 +4096,10 @@ if __name__ == "__main__":
 <p><a href="https://console.bce.baidu.com/qianfan/ais/console/onlineService">在线服务</a>，购买<code>ERNIE-Bot大模型公有云在线调用服务</code>，<a href="https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application">应用接入</a> 创建应用，获取<code>API Key</code>和<code>Secret Key</code>，配置即可。</p>
 </li>
 <li>
+<p>AppBuilder</p>
+<p>百度智能云 AppBuilder 应用中心：<a href="https://console.bce.baidu.com/ai_apaas/appCenter">https://console.bce.baidu.com/ai_apaas/appCenter</a>，创建一个你的专属应用 —— 知识问答应用（RAG框架），创建好后，在<code>API调用</code>新建一个token，配置到AI Vtuber中即可对接使用。  </p>
+</li>
+<li>
 <p>web</p>
 <p>服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
 <p>下载yiyan-api源码，根据官方教程部署搭建运行即可。简述过程就是安装Node.js &gt;= 18，然后再源码项目文件夹内运行<code>npm install</code>，最后运行<code>npm start</code>即可。  </p>
