--- a/site/index.html
+++ b/site/index.html
@@ -4096,10 +4096,6 @@ if __name__ == "__main__":
 <p><a href="https://console.bce.baidu.com/qianfan/ais/console/onlineService">在线服务</a>，购买<code>ERNIE-Bot大模型公有云在线调用服务</code>，<a href="https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application">应用接入</a> 创建应用，获取<code>API Key</code>和<code>Secret Key</code>，配置即可。</p>
 </li>
 <li>
-<p>AppBuilder</p>
-<p>百度智能云 AppBuilder 应用中心：<a href="https://console.bce.baidu.com/ai_apaas/appCenter">https://console.bce.baidu.com/ai_apaas/appCenter</a>，创建一个你的专属应用 —— 知识问答应用（RAG框架），创建好后，在<code>API调用</code>新建一个token，配置到AI Vtuber中即可对接使用。  </p>
-</li>
-<li>
 <p>web</p>
 <p>服务端：<a href="//github.com/zhuweiyou/yiyan-api">yiyan-api</a>  </p>
 <p>下载yiyan-api源码，根据官方教程部署搭建运行即可。简述过程就是安装Node.js &gt;= 18，然后再源码项目文件夹内运行<code>npm install</code>，最后运行<code>npm start</code>即可。  </p>
@@ -4118,10 +4114,19 @@ if __name__ == "__main__":
 <p>当然，还没完，现在官方还在内测，所以你创建了密钥还不能用，需要联系官方开通调用权限。联系方式见 <a href="https://xingchen.aliyun.com/xingchen/document/service_support">使用文档-服务支持</a>  </p>
 <h4 id="_46">千帆大模型</h4>
 <h5 id="_47">第三方库</h5>
+<ul>
+<li>
+<p>千帆大模型</p>
 <p>接入库，我对原库做了修改：<a href="https://github.com/Ikaros-521/WenxinWorkshop-Python-SDK">WenxinWorkshop-Python-SDK</a>  </p>
 <p>百度智能云千帆大模型平台：<a href="https://cloud.baidu.com/product/wenxinworkshop">https://cloud.baidu.com/product/wenxinworkshop</a>  </p>
 <p>官方API文档：<a href="https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11">https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11</a>  </p>
 <p><a href="https://console.bce.baidu.com/qianfan/ais/console/onlineService">在线服务</a>，购买<code>ERNIE-Bot大模型公有云在线调用服务</code>等服务，<a href="https://console.bce.baidu.com/qianfan/ais/console/applicationConsole/application">应用接入</a> 创建应用，获取<code>API Key</code>和<code>Secret Key</code>，配置即可。  </p>
+</li>
+<li>
+<p>AppBuilder</p>
+<p>百度智能云 AppBuilder 应用中心：<a href="https://console.bce.baidu.com/ai_apaas/appCenter">https://console.bce.baidu.com/ai_apaas/appCenter</a>，创建一个你的专属应用 —— 知识问答应用（RAG框架），创建好后，在<code>API调用</code>新建一个token，配置到AI Vtuber中即可对接使用。  </p>
+</li>
+</ul>
 <h5 id="_48">官方库（有版本冲突，暂不启用）</h5>
 <p>接入库：<a href="https://github.com/baidubce/bce-qianfan-sdk">bce-qianfan-sdk</a>  </p>
 <p>使用文档：<a href="https://github.com/baidubce/bce-qianfan-sdk#readme">bce-qianfan-sdk#readme</a>  </p>
