--- a/site/index.html
+++ b/site/index.html
@@ -4066,6 +4066,7 @@ if __name__ == "__main__":
 <p>api库（HildaM开发）：<a href="//github.com/HildaM/sparkdesk-api">sparkdesk-api</a></p>
 <p>web配置获取方法：<a href="//github.com/HildaM/sparkdesk-api/tree/main/docs">sparkdesk-api/tree/main/docs</a></p>
 <p>api申请：提交工单申请，工单提交页 <a href="//console.xfyun.cn/services/cbm">console.xfyun.cn/services/cbm</a></p>
+<p>助手API：前往<a href="https://xinghuo.xfyun.cn/botcenter/createbot">https://xinghuo.xfyun.cn/botcenter/createbot</a> 创建助手, 获取“助手ID”，然后协同讯飞星火大模型的其他密钥配置使用即可。  </p>
 <h4 id="_43">闻达</h4>
 <p>官方仓库：<a href="//github.com/wenda-LLM/wenda">github.com/wenda-LLM/wenda</a></p>
 <p>整合包下载：<a href="//pan.quark.cn/s/c4cb08de666e">pan.quark.cn/s/c4cb08de666e</a> 提取码：4b4R</p>
