--- a/site/index.html
+++ b/site/index.html
@@ -4477,6 +4477,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-3-30</p>
 <ul>
+<li>部分函数区分操作系统执行</li>
+<li>新增部分测试程序</li>
+</ul>
+</li>
+<li>
+<p>2024-3-30</p>
+<ul>
 <li>切换openai测试功能为openai库（之前死活不行，今天一试噶噶顺，醉了</li>
 </ul>
 </li>
