--- a/site/index.html
+++ b/site/index.html
@@ -4054,6 +4054,7 @@ if __name__ == "__main__":
 <h4 id="chat_with_file_1">chat_with_file</h4>
 <p>参考：<a href="//github.com/Ikaros-521/LangChainSummarize">LangChainSummarize</a></p>
 <p>构建本地向量数据库时，如果本地电脑的配置太低，可以使用 <a href="//drive.google.com/file/d/1rbt2Yv7_pC1cmuODwmR2-1_cxFBFOfn8/view?usp=sharing">faiss_text2vec.ipynb</a> 云端解析向量数据库，拷贝回本地后再使用即可</p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1tM4y1v7i5">https://www.bilibili.com/video/BV1tM4y1v7i5</a></p>
 <ul>
 <li>author: <a href="//github.com/HildaM/text2vec_colab">HildaM/text2vec_colab</a></li>
 </ul>
@@ -4061,22 +4062,35 @@ if __name__ == "__main__":
 <p>官方仓库：<a href="//github.com/oobabooga/text-generation-webui">text-generation-webui</a></p>
 <p>懒人包：b站：coyude <a href="//www.bilibili.com/video/BV1tP411d7wo">AI对话 懒人包v1发布 图形化启动界面(oobabooga/text-generation-webui)可用chatglm/rwkv/vicuna</a></p>
 <p>API调用demo：<a href="//github.com/oobabooga/text-generation-webui/tree/main/api-examples">api-examples</a></p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1U14y1d7rz">https://www.bilibili.com/video/BV1U14y1d7rz</a></p>
 <h4 id="_42">讯飞星火</h4>
-<p>官网：<a href="//xinghuo.xfyun.cn/">xinghuo.xfyun.cn</a></p>
+<ul>
+<li>
+<p>web&amp;API
+    官网：<a href="//xinghuo.xfyun.cn/">xinghuo.xfyun.cn</a></p>
 <p>api库（HildaM开发）：<a href="//github.com/HildaM/sparkdesk-api">sparkdesk-api</a></p>
 <p>web配置获取方法：<a href="//github.com/HildaM/sparkdesk-api/tree/main/docs">sparkdesk-api/tree/main/docs</a></p>
 <p>api申请：提交工单申请，工单提交页 <a href="//console.xfyun.cn/services/cbm">console.xfyun.cn/services/cbm</a></p>
-<p>助手API：前往<a href="https://xinghuo.xfyun.cn/botcenter/createbot">https://xinghuo.xfyun.cn/botcenter/createbot</a> 创建助手, 获取“助手ID”，然后协同讯飞星火大模型的其他密钥配置使用即可。  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1au4y127wW">https://www.bilibili.com/video/BV1au4y127wW</a></p>
+</li>
+<li>
+<p>应用API
+    助手API：前往<a href="https://xinghuo.xfyun.cn/botcenter/createbot">https://xinghuo.xfyun.cn/botcenter/createbot</a> 创建助手, 获取“助手ID”，然后协同讯飞星火大模型的其他密钥配置使用即可。  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1Zq421A73F">https://www.bilibili.com/video/BV1Zq421A73F</a></p>
+</li>
+</ul>
 <h4 id="_43">闻达</h4>
 <p>官方仓库：<a href="//github.com/wenda-LLM/wenda">github.com/wenda-LLM/wenda</a></p>
 <p>整合包下载：<a href="//pan.quark.cn/s/c4cb08de666e">pan.quark.cn/s/c4cb08de666e</a> 提取码：4b4R</p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1ru4y1B7js">https://www.bilibili.com/video/BV1ru4y1B7js</a></p>
 <p>接入说明：</p>
 <p>启动 <code>RWKV-Runner</code> ，配置配配好，模型搞搞好，然后启动。  </p>
 <p>如果遇到midi2audio等库缺失的报错，你可以选中整合包的python环境下的python.exe，进行库补装，参考命令 <code>python.exe -m pip midi2audio mido lm_dataformat GPUtil sse_starlette</code>  </p>
 <p><img alt="image" src="static/images/luna-ai/258466304-2c3167ae-13ad-4f68-911b-d4262210e81d.png" /></p>
 <p><img alt="闻达-接入说明" src="static/images/luna-ai/258465928-228da499-9de6-45a3-8bb3-5cc684569c00.png" /></p>
 <h4 id="chatterbot_1">ChatterBot</h4>
-<p><a href="//github.com/gunthercox/ChatterBot">官方仓库</a></p>
+<p>官方仓库：<a href="https://github.com/gunthercox/ChatterBot">https://github.com/gunthercox/ChatterBot</a>  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1fh411L72s">https://www.bilibili.com/video/BV1fh411L72s</a>  </p>
 <p>ChatterBot 是一个开源的 Python 聊天机器人框架，使用机器学习算法（尤其是自然语言处理、文本语义分析等）来实现基于规则和语境的自动聊天系统。它可以让开发者通过简单的配置和训练，构建出各种类型的聊天机器人，包括问答机器人、任务型机器人、闲聊机器人等。</p>
 <p>ChatterBot 的核心思想是：基于历史对话数据，使用机器学习和自然语言处理技术来分析和预测用户输入，然后生成响应。基于这种方法，聊天机器人的反应会更加智能、灵活、接近人类对话的方式。此外，ChatterBot 支持多种存储方式，如 JSON、SQLAlchemy、MongoDB 等，以及多种接口调用方式，如 RESTful API、WebSocket 等，方便开发者在不同场景中进行集成。</p>
 <p>总的来说，ChatterBot 是一个非常强大、灵活、易用的聊天机器人框架，帮助开发者快速搭建出个性化、定制化的聊天机器人，从而提升用户体验和服务质量。  </p>
@@ -4089,6 +4103,7 @@ if __name__ == "__main__":
 <p>ps：cookie有效期较短  </p>
 <h4 id="_44">文心一言</h4>
 <p>官网：<a href="//yiyan.baidu.com">yiyan.baidu.com</a>  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1kw411v7z6">https://www.bilibili.com/video/BV1kw411v7z6</a>  </p>
 <ul>
 <li>
 <p>api</p>
@@ -4110,6 +4125,7 @@ if __name__ == "__main__":
 </ul>
 <h4 id="_45">通义星尘</h4>
 <p>官网：<a href="https://xingchen.aliyun.com/">xingchen.aliyun.com</a>  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1iu4y1379B">https://www.bilibili.com/video/BV1iu4y1379B</a>  </p>
 <p>进入官网，注册账号，登录，打开<code>接口管理</code>页面，点击<code>API-KEY管理</code>，<code>创建密钥</code>，复制密钥，配置对应配置项。  </p>
 <p>角色ID如何获取？ 首页点击<code>创建角色</code>，自己创建去！创建完成后，进入角色聊天页，角色头像边上有个<code>信息</code>，点进去可以看见<code>ID</code>，复制配置即可。</p>
 <p>当然，还没完，现在官方还在内测，所以你创建了密钥还不能用，需要联系官方开通调用权限。联系方式见 <a href="https://xingchen.aliyun.com/xingchen/document/service_support">使用文档-服务支持</a>  </p>
@@ -4118,6 +4134,7 @@ if __name__ == "__main__":
 <ul>
 <li>
 <p>千帆大模型</p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1EC4y1Q7ob">https://www.bilibili.com/video/BV1EC4y1Q7ob</a>  </p>
 <p>接入库，我对原库做了修改：<a href="https://github.com/Ikaros-521/WenxinWorkshop-Python-SDK">WenxinWorkshop-Python-SDK</a>  </p>
 <p>百度智能云千帆大模型平台：<a href="https://cloud.baidu.com/product/wenxinworkshop">https://cloud.baidu.com/product/wenxinworkshop</a>  </p>
 <p>官方API文档：<a href="https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11">https://cloud.baidu.com/doc/WENXINWORKSHOP/s/jlil56u11</a>  </p>
@@ -4125,6 +4142,7 @@ if __name__ == "__main__":
 </li>
 <li>
 <p>AppBuilder</p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1b1421D7fz">https://www.bilibili.com/video/BV1b1421D7fz</a>  </p>
 <p>百度智能云 AppBuilder 应用中心：<a href="https://console.bce.baidu.com/ai_apaas/appCenter">https://console.bce.baidu.com/ai_apaas/appCenter</a>，创建一个你的专属应用 —— 知识问答应用（RAG框架），创建好后，在<code>API调用</code>新建一个token，配置到AI Vtuber中即可对接使用。  </p>
 </li>
 </ul>
@@ -4135,7 +4153,9 @@ if __name__ == "__main__":
 <h4 id="gemini">Gemini</h4>
 <p>官方平台：<a href="https://makersuite.google.com/app">makersuite.google.com/app</a>  </p>
 <p>前往 <a href="https://makersuite.google.com/app/apikey">makersuite.google.com/app/apikey</a> 创建一个API KEY，配置到项目中即可使用啦~（记得开魔法配置代理！）  </p>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1op4y1f7gr">https://www.bilibili.com/video/BV1op4y1f7gr</a>  </p>
 <h4 id="kimi-chat">Kimi Chat</h4>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1Vm411S7zL">https://www.bilibili.com/video/BV1Vm411S7zL</a>  </p>
 <p>Kimi官网：<a href="https://kimi.moonshot.cn/">https://kimi.moonshot.cn/</a>  </p>
 <p>API申请：<a href="https://platform.moonshot.cn/console/api-keys">https://platform.moonshot.cn/console/api-keys</a>  </p>
 <p>使用：<br />
@@ -4145,6 +4165,7 @@ if __name__ == "__main__":
     API密钥：上面申请的密钥<br />
     模型：moonshot-v1-8k  </p>
 <h4 id="qanything">QAnything</h4>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1p2421F7QE">https://www.bilibili.com/video/BV1p2421F7QE</a>  </p>
 <p>官方仓库：<a href="https://github.com/netease-youdao/QAnything">https://github.com/netease-youdao/QAnything</a>  </p>
 <h5 id="_49">在线</h5>
 <p>在线官网：<a href="https://ai.youdao.com/saas/qanything/#/home">https://ai.youdao.com/saas/qanything/#/home</a>  </p>
@@ -4157,9 +4178,11 @@ if __name__ == "__main__":
 <h4 id="_51">通义千问</h4>
 <p>官网：<a href="//qianwen.aliyun.com/">qianwen.aliyun.com</a>   </p>
 <h5 id="api_1">API类型</h5>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1dx4y1S7Ei">https://www.bilibili.com/video/BV1dx4y1S7Ei</a>  </p>
 <p>API文档：<a href="https://help.aliyun.com/zh/dashscope/developer-reference/quick-start">https://help.aliyun.com/zh/dashscope/developer-reference/quick-start</a><br />
 申请API KEY 文档（文档教程详细，我就不再赘述了）：<a href="https://help.aliyun.com/zh/dashscope/developer-reference/activate-dashscope-and-create-an-api-key">https://help.aliyun.com/zh/dashscope/developer-reference/activate-dashscope-and-create-an-api-key</a>  </p>
 <h5 id="web">web类型</h5>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1nc411Z7Db">https://www.bilibili.com/video/BV1nc411Z7Db</a>  </p>
 <p>依赖库：<a href="https://github.com/leeeduke/revTongYi">revTongYi</a>  </p>
 <p>cookie 获取方式：<br />
 1. 安装 <a href="//chrome.google.com/webstore/detail/cookie-editor/hlkenndednhfkekhgcdicdfddnkalmdm">Chrome</a>、<a href="//microsoftedge.microsoft.com/addons/detail/cookie-editor-plus/nbmajjcfigmlcnikhnfhhicidleefhpp">Edge</a> 或 <a href="//addons.mozilla.org/en-US/firefox/addon/cookie-editor/">Firefox</a> 上的<code>Cookies Editor</code>插件
@@ -4172,9 +4195,11 @@ if __name__ == "__main__":
 <p><img alt="image" src="static/images/luna-ai/fastgpt-1.png" />  </p>
 <p><img alt="image" src="static/images/luna-ai/fastgpt-2.png" />  </p>
 <h4 id="koboldcpp">koboldcpp</h4>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV1Ci421o7kt">https://www.bilibili.com/video/BV1Ci421o7kt</a>  </p>
 <p>官方仓库：<a href="https://github.com/LostRuins/koboldcpp">https://github.com/LostRuins/koboldcpp</a>  </p>
 <p>exe程序下载(也可以去整合包网盘中下载)：<a href="https://github.com/LostRuins/koboldcpp/releases">https://github.com/LostRuins/koboldcpp/releases</a></p>
 <h4 id="anythingllm">AnythingLLM</h4>
+<p>视频教程：<a href="https://www.bilibili.com/video/BV13x421k7Yf">https://www.bilibili.com/video/BV13x421k7Yf</a>  </p>
 <p>官网：<a href="https://useanything.com/">https://useanything.com/</a>  </p>
 <p>下载安装，然后根据官方提示选择对接的LLM、向量数据库等，创建工作区（有知识库检索需求的请在工作区添加文档本导入到需要的工作区内）。  </p>
 <p>左下角设置图标进去，到API KEYS创建密钥，复制密钥，配置到项目中，保存配置，读取工作区列表，然后选择你要使用的工作区，保存运行使用即可。  </p>
