--- a/site/index.html
+++ b/site/index.html
@@ -4548,6 +4548,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-6</p>
+<ul>
+<li>gpt-sovits新增对刘悦佬0322整合包版本的兼容</li>
+</ul>
+</li>
+<li>
 <p>2024-3-30</p>
 <ul>
 <li>部分函数区分操作系统执行</li>
