--- a/site/index.html
+++ b/site/index.html
@@ -4551,6 +4551,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-4-6</p>
 <ul>
 <li>gpt-sovits新增对刘悦佬0322整合包版本的兼容</li>
+<li>本地问答库 文本模式补充json文件数据加载异常报错</li>
 </ul>
 </li>
 <li>
