--- a/site/index.html
+++ b/site/index.html
@@ -4548,6 +4548,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-7</p>
+<ul>
+<li>webui API地址输入框新增url校验</li>
+<li>common新增部分校验函数，用于未来的校验功能实现</li>
+<li>删减部分违禁词</li>
+</ul>
+</li>
+<li>
 <p>2024-4-6</p>
 <ul>
 <li>gpt-sovits新增对刘悦佬0322整合包版本的兼容</li>
