--- a/site/index.html
+++ b/site/index.html
@@ -4548,6 +4548,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-9</p>
+<ul>
+<li>答谢板块 修复 文案清空时 获取文案失败的bug，空时直接跳过功能</li>
+<li>更新启动脚本</li>
+</ul>
+</li>
+<li>
 <p>2024-4-7</p>
 <ul>
 <li>webui API地址输入框新增url校验</li>
