--- a/site/index.html
+++ b/site/index.html
@@ -4547,6 +4547,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-4-10<ul>
+<li>gpt-sovits新增gradio0322版本接口对接，但是！gradio版本需要更新，会库冲突！约等于没法使用</li>
+</ul>
+</li>
 <li>
 <p>2024-4-9</p>
 <ul>
