--- a/site/index.html
+++ b/site/index.html
@@ -4547,7 +4547,22 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-4-10<ul>
+<li>
+<p>2024-4-12</p>
+<ul>
+<li>【大改】新增待合成音频消息队列结构大改，queue改list，支持消息优先级自定义&amp;消息最大保留数，待稳定性测试</li>
+<li>闲时任务新增刷新计时类型自选</li>
+</ul>
+</li>
+<li>
+<p>2024-4-11</p>
+<ul>
+<li>gpt-sovits新增gradio0322版本接口对接，但是！gradio版本需要更新，会库冲突</li>
+</ul>
+</li>
+<li>
+<p>2024-4-10</p>
+<ul>
 <li>gpt-sovits新增gradio0322版本接口对接，但是！gradio版本需要更新，会库冲突！约等于没法使用</li>
 </ul>
 </li>
