--- a/site/index.html
+++ b/site/index.html
@@ -4552,6 +4552,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>【大改】新增待合成音频消息队列结构大改，queue改list，支持消息优先级自定义&amp;消息最大保留数，待稳定性测试</li>
 <li>闲时任务新增刷新计时类型自选</li>
+<li>聊天页 直接复读-插队首 全播放器适配 并 修复类型未携带的bug</li>
+<li>修改默认消息队列保留数为50</li>
 </ul>
 </li>
 <li>
