--- a/site/index.html
+++ b/site/index.html
@@ -4548,6 +4548,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-13 </p>
+<ul>
+<li>消息队列优先级数据类型不对导致的bug修复 </li>
+<li>修复队列判空函数的判断错误bug </li>
+<li>优化faster_whisper模型加载逻辑，大幅提升处理速度 </li>
+</ul>
+</li>
+<li>
 <p>2024-4-12</p>
 <ul>
 <li>【大改】新增待合成音频消息队列结构大改，queue改list，支持消息优先级自定义&amp;消息最大保留数，待稳定性测试</li>
