webui 新增 本地路径指定URL路径访问 功能，即添加映射后，可以通过http下载合成的音频

--- a/site/index.html
+++ b/site/index.html
@@ -4586,6 +4586,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-4-14</p>
 <ul>
 <li>支持拼多多 弹幕监听，实现逻辑同快手2一样，采用油猴前端监听</li>
+<li>webui 新增 本地路径指定URL路径访问 功能，即添加映射后，可以通过http下载合成的音频</li>
 </ul>
 </li>
 <li>
