--- a/site/index.html
+++ b/site/index.html
@@ -4583,6 +4583,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-15</p>
+<ul>
+<li>兼容CyberWon的webtts-v2</li>
+</ul>
+</li>
+<li>
 <p>2024-4-14</p>
 <ul>
 <li>支持拼多多 弹幕监听，实现逻辑同快手2一样，采用油猴前端监听</li>
