--- a/site/index.html
+++ b/site/index.html
@@ -4585,7 +4585,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-4-15</p>
 <ul>
-<li>兼容CyberWon的webtts-v2</li>
+<li>兼容CyberWon的webtts-v1.4 v2</li>
 </ul>
 </li>
 <li>
