--- a/site/index.html
+++ b/site/index.html
@@ -4861,6 +4861,13 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-16</p>
+<ul>
+<li>webui 页面配置新增 配置模板</li>
+<li>删减违禁词</li>
+</ul>
+</li>
+<li>
 <p>2024-4-15</p>
 <ul>
 <li>兼容CyberWon的webtts-v1.4 v2</li>
