--- a/site/index.html
+++ b/site/index.html
@@ -4861,6 +4861,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-17</p>
+<ul>
+<li>修改openai tts的官方api地址</li>
+</ul>
+</li>
+<li>
 <p>2024-4-16</p>
 <ul>
 <li>webui 页面配置新增 配置模板</li>
@@ -4895,12 +4901,6 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>闲时任务新增刷新计时类型自选</li>
 <li>聊天页 直接复读-插队首 全播放器适配 并 修复类型未携带的bug</li>
 <li>修改默认消息队列保留数为50</li>
-</ul>
-</li>
-<li>
-<p>2024-4-11</p>
-<ul>
-<li>gpt-sovits新增gradio0322版本接口对接，但是！gradio版本需要更新，会库冲突</li>
 </ul>
 </li>
 <li>
