--- a/site/index.html
+++ b/site/index.html
@@ -4861,6 +4861,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-4-18</p>
+<ul>
+<li>新增平台 大象新闻</li>
+</ul>
+</li>
+<li>
 <p>2024-4-17</p>
 <ul>
 <li>修改openai tts的官方api地址</li>
