--- a/site/index.html
+++ b/site/index.html
@@ -4860,6 +4860,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-4-26<ul>
+<li>优化能自定义的下拉选择框在自定义输入后，重启webui可以追加自定义选项的功能</li>
+</ul>
+</li>
 <li>2024-4-25<ul>
 <li>优化openai 测试的报错日志</li>
 </ul>
