--- a/site/index.html
+++ b/site/index.html
@@ -4878,6 +4878,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-7</p>
+<ul>
+<li>新增 弹幕黑名单，过滤指定用户名 的用户弹幕</li>
+</ul>
+</li>
+<li>
 <p>2024-5-5</p>
 <ul>
 <li>优化js直播监听脚本，新增监听1688直播间弹幕，使用同拼多多一致 </li>
