--- a/site/index.html
+++ b/site/index.html
@@ -4858,7 +4858,15 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-5-8<ul>
+<li>
+<p>2024-5-10</p>
+<ul>
+<li>b站监听的数据，针对用户头像数据 可能不存在问题，追加了None判断处理</li>
+</ul>
+</li>
+<li>
+<p>2024-5-8</p>
+<ul>
 <li>优先级补充 入场欢迎 优先级</li>
 </ul>
 </li>
