--- a/site/index.html
+++ b/site/index.html
@@ -4864,6 +4864,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>b站监听的数据，针对用户头像数据 可能不存在问题，追加了None判断处理</li>
 <li>fish speech支持在线web调用</li>
 <li>按键映射新增本地音频的映射配置（不过后端没实现）</li>
+<li>更新文档至：<a href="https://github.com/Ikaros-521/Luna-Docs">Ikaros-521/Luna-Docs</a></li>
 </ul>
 </li>
 <li>
