--- a/site/index.html
+++ b/site/index.html
@@ -4865,6 +4865,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>fish speech支持在线web调用</li>
 <li>按键映射新增本地音频的映射配置（不过后端没实现）</li>
 <li>更新文档至：<a href="https://github.com/Ikaros-521/Luna-Docs">Ikaros-521/Luna-Docs</a></li>
+<li>按键映射 新增 本地音频的映射，同样可以通过关键词或礼物触发</li>
 </ul>
 </li>
 <li>
