--- a/site/index.html
+++ b/site/index.html
@@ -4888,8 +4888,11 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-5-11<ul>
+<li>
+<p>2024-5-11</p>
+<ul>
 <li>webui多行配置 空配置情况下 有迭代出错问题，已修复</li>
+<li>修复gpt-sovits 0322的自动识别语言bug；杂项更新</li>
 </ul>
 </li>
 <li>
