--- a/site/index.html
+++ b/site/index.html
@@ -4889,6 +4889,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-12</p>
+<ul>
+<li>答谢板块 礼物答谢 新增变量gift_num，unit_price，total_price，cur_time</li>
+</ul>
+</li>
+<li>
 <p>2024-5-11</p>
 <ul>
 <li>webui多行配置 空配置情况下 有迭代出错问题，已修复</li>
