--- a/site/index.html
+++ b/site/index.html
@@ -4891,7 +4891,9 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>
 <p>2024-5-12</p>
 <ul>
-<li>答谢板块 礼物答谢 新增变量gift_num，unit_price，total_price，cur_time</li>
+<li>答谢、积分板块 礼物答谢 新增变量gift_num，unit_price，total_price，cur_time</li>
+<li>按键映射板块 文案通用也支持礼物答谢相关的变量</li>
+<li>fish speech支持填入说话人 随机获取参考音频信息</li>
 </ul>
 </li>
 <li>
