--- a/site/index.html
+++ b/site/index.html
@@ -4894,6 +4894,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>答谢、积分板块 礼物答谢 新增变量gift_num，unit_price，total_price，cur_time</li>
 <li>按键映射板块 文案通用也支持礼物答谢相关的变量</li>
 <li>fish speech支持填入说话人 随机获取参考音频信息</li>
+<li>优化webui anythingLLM获取工作区的逻辑，直接获取webui配置进行获取，并优化了提示</li>
+<li>优化按键录音逻辑，不支持多次按录音键</li>
 </ul>
 </li>
 <li>
