--- a/site/index.html
+++ b/site/index.html
@@ -4889,6 +4889,14 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-13</p>
+<ul>
+<li>优化报错提示</li>
+<li>智谱AI 兼容zhipuai 1.x 2.x库版本</li>
+<li>新增了glm-4v的调用函数</li>
+</ul>
+</li>
+<li>
 <p>2024-5-12</p>
 <ul>
 <li>答谢、积分板块 礼物答谢 新增变量gift_num，unit_price，total_price，cur_time</li>
