--- a/site/index.html
+++ b/site/index.html
@@ -4893,7 +4893,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>优化报错提示</li>
 <li>智谱AI 兼容zhipuai 1.x 2.x库版本</li>
-<li>新增了glm-4v的调用函数</li>
+<li>图像识别板块 新增智谱AI glm-4v</li>
 </ul>
 </li>
 <li>
