--- a/site/index.html
+++ b/site/index.html
@@ -4889,6 +4889,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-14</p>
+<ul>
+<li>更新gpt-4o模型的选项</li>
+</ul>
+</li>
+<li>
 <p>2024-5-13</p>
 <ul>
 <li>优化报错提示</li>
