--- a/site/index.html
+++ b/site/index.html
@@ -3479,7 +3479,7 @@ Linux部署问题讨论：<a href="https://github.com/Ikaros-521/AI-Vtuber/issue
 </li>
 </ul>
 </div>
-<p>??? <span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="m15.07 11.25-.9.92C13.45 12.89 13 13.5 13 15h-2v-.5c0-1.11.45-2.11 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41a2 2 0 0 0-2-2 2 2 0 0 0-2 2H8a4 4 0 0 1 4-4 4 4 0 0 1 4 4 3.2 3.2 0 0 1-.93 2.25M13 19h-2v-2h2M12 2A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10c0-5.53-4.5-10-10-10Z"/></svg></span> <code>chat_with_file</code> 模式说明</p>
+<p>???  note "<code>chat_with_file</code> 模式说明"</p>
 <pre><code>#### 模式简介
 
 
