--- a/site/index.html
+++ b/site/index.html
@@ -3038,7 +3038,7 @@
 <div class="admonition quote">
 <p class="admonition-title">介绍</p>
 <p><code>Luna AI</code> 是一款结合了最先进技术的虚拟AI主播。它整合了很多高效的人工智能模型和平台，包括 <code>ChatterBot、GPT、Claude、langchain、chatglm、text-generation-webui、讯飞星火、智谱AI、谷歌Bard、文心一言、通义星尘、通义千问、千帆大模型、Gemini、Kimi Chat、QAnything、koboldcpp、FastGPT、Ollama、One-API、AnythingLLM</code>。通过 Luna AI, 我们既可以在本地运行本地模型，也可以通过云端服务使用开放式 AI 平台的功能。当然，为了让对话照进现实，Luna AI 还结合了多模态模型，包括 <code>Gemini</code> 的图像识别能力，获取电脑画面进行分析讲解。 </p>
-<p><code>Luna AI</code> 的外观由 <code>Live2D、Vtube Studio、xuniren、UE5 结合 Audio2Face、EasyAIVtuber、数字人视频播放器（Easy-Wav2Lip）</code> 技术打造，为用户提供了一个生动、互动的虚拟形象。这使得 <code>Luna AI</code> 能够在各大直播平台，如 <code>Bilibili、抖音、快手、微信视频号、拼多多、1688、斗鱼、YouTube、Twitch 和 TikTok</code>，进行实时互动直播。当然，它也可以在本地环境中与您进行个性化对话。</p>
+<p><code>Luna AI</code> 的外观由 <code>Live2D、Vtube Studio、xuniren、UE5 结合 Audio2Face、EasyAIVtuber、数字人视频播放器（Easy-Wav2Lip、Sadtalker、GeneFace++、MuseTalk、本地视频）</code> 技术打造，为用户提供了一个生动、互动的虚拟形象。这使得 <code>Luna AI</code> 能够在各大直播平台，如 <code>Bilibili、抖音、快手、微信视频号、拼多多、1688、斗鱼、YouTube、Twitch 和 TikTok</code>，进行实时互动直播。当然，它也可以在本地环境中与您进行个性化对话。</p>
 <p>为了使交流更加自然，<code>Luna AI</code> 使用了先进的自然语言处理技术和文本转语音技术，如 <code>Edge-TTS、VITS-Fast、elevenlabs、bark-gui、VALL-E-X、睿声AI、genshinvoice.top、tts.ai-lab.top、OpenVoice、GPT_SoVITS、clone-voice、Azure TTS、fish-speech</code>。这些技术能够生成流畅的回答，而且 Luna AI 还可以通过 <code>so-vits-svc 和 DDSP-SVC</code> 实现声音的变化，以适应不同的场景和角色。</p>
 <p>此外，<code>Luna AI</code> 还能够通过特定指令与 <code>Stable Diffusion</code> 协作，展示画作。用户还可以自定义文案，让 Luna AI 循环播放，以满足不同场合的需求。</p>
 </div>
