--- a/site/index.html
+++ b/site/index.html
@@ -4874,6 +4874,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-15</p>
+<ul>
+<li>数字人视频播放器 支持local类型，直接播放本地视频，支持 MuseTalk 对接</li>
+</ul>
+</li>
+<li>
 <p>2024-5-14</p>
 <ul>
 <li>更新gpt-4o模型的选项</li>
