--- a/site/index.html
+++ b/site/index.html
@@ -4877,6 +4877,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-5-16</p>
 <ul>
 <li>对接fish-speech-V1.1.0本地整合包API </li>
+<li>修复fish-speech 在线调用功能</li>
 </ul>
 </li>
 <li>
