--- a/site/index.html
+++ b/site/index.html
@@ -4878,6 +4878,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <ul>
 <li>对接fish-speech-V1.1.0本地整合包API </li>
 <li>修复fish-speech 在线调用功能</li>
+<li>fish-speech在线api支持参考音频过期后自动更新功能，以便长期使用</li>
 </ul>
 </li>
 <li>
