--- a/site/index.html
+++ b/site/index.html
@@ -4891,6 +4891,10 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
+<li>2024-5-17<ul>
+<li>fish-speech v1.1.0的参考音频参数传参错误问题修复</li>
+</ul>
+</li>
 <li>
 <p>2024-5-16</p>
 <ul>
