--- a/site/index.html
+++ b/site/index.html
@@ -4891,8 +4891,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <details class="note">
 <summary>更新日志</summary>
 <ul>
-<li>2024-5-17<ul>
+<li>
+<p>2024-5-17</p>
+<ul>
 <li>fish-speech v1.1.0的参考音频参数传参错误问题修复</li>
+<li>优化github issue模板等</li>
+<li>语音聊天的数据 新增talk类型，用于区分语言和弹幕数据（待测）</li>
 </ul>
 </li>
 <li>
