--- a/site/index.html
+++ b/site/index.html
@@ -4892,6 +4892,25 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-19</p>
+<ul>
+<li>修复变量使用错误问题</li>
+<li>删除定时任务的用户名转换函数调用（定时任务没有用户名</li>
+<li>定时任务用户名传入 定时任务字符</li>
+<li>音频合成部分的用户名转换增加None判断</li>
+</ul>
+</li>
+<li>
+<p>2024-5-18</p>
+<ul>
+<li>补充本地问答-文本&amp;助播的 [1|2]语法支持</li>
+<li>闲时任务的间隔支持到0-0，但是这么使用会丢数据也会日志爆炸</li>
+<li>音频播放间隔改为区间随机</li>
+<li>闲时任务新增2种触发类型，可以根据待合成消息、待播放音频队列设置限制触发</li>
+<li>普通音频播放支持设置 间隔时间重复次数区间，可以实现随机延时间隔的功能</li>
+</ul>
+</li>
+<li>
 <p>2024-5-17</p>
 <ul>
 <li>fish-speech v1.1.0的参考音频参数传参错误问题修复</li>
