--- a/site/index.html
+++ b/site/index.html
@@ -4898,6 +4898,9 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <li>删除定时任务的用户名转换函数调用（定时任务没有用户名</li>
 <li>定时任务用户名传入 定时任务字符</li>
 <li>音频合成部分的用户名转换增加None判断</li>
+<li>优化消息遗忘保留的webui设计</li>
+<li>过滤 新增 限定时间段内的数据去重功能（针对数据有 弹幕、入场、礼物），时间段内的重复弹幕等会被丢弃</li>
+<li>答谢、念弹幕、本地问答，新增周期性触发机制，可以通过此配置缓存一段时间的数据，在周期到后触发n次</li>
 </ul>
 </li>
 <li>
