--- a/site/index.html
+++ b/site/index.html
@@ -4892,6 +4892,12 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <summary>更新日志</summary>
 <ul>
 <li>
+<p>2024-5-20</p>
+<ul>
+<li>对webui部分配置项增加了鼠标悬停提示，方便用户理解配置功能。（工作量较大，慢慢推进</li>
+</ul>
+</li>
+<li>
 <p>2024-5-19</p>
 <ul>
 <li>修复变量使用错误问题</li>
