--- a/site/index.html
+++ b/site/index.html
@@ -4895,6 +4895,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-5-20</p>
 <ul>
 <li>对webui部分配置项增加了鼠标悬停提示，方便用户理解配置功能。（工作量较大，慢慢推进</li>
+<li>LLM新增自定义LLM板块，可以自定义API地址、请求类型、请求头、请求体、代理地址、数据解析等。通过此功能，理论上可以接入绝大多数的llm接口，不过没上下文。</li>
 </ul>
 </li>
 <li>
