--- a/site/index.html
+++ b/site/index.html
@@ -4895,6 +4895,7 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 <p>2024-5-22</p>
 <ul>
 <li>更新千帆新的模型配置(限时白嫖)</li>
+<li>删减部分live2d模型</li>
 </ul>
 </li>
 <li>
