--- a/site/index.html
+++ b/site/index.html
@@ -4899,7 +4899,8 @@ error,<span class="w"> </span>ref_enc.convs.0.weight_g<span class="w"> </span>is
 </li>
 </ul>
 </details>
-<p>之后也会考虑把这个回调改成asyn）</p>
+<p>之后也会考虑把这个回调改成asyn）
+        - 音频信息回调函数改为异步请求</p>
 <pre><code>- 2024-5-22
     - 更新千帆新的模型配置(限时白嫖)
     - 删减部分live2d模型
